RegisterSharing_GPGPU-Sim/v3.x/cuobjdump_to_ptxplus/ptx.output
Terminals unused in grammar

   BRANCHTARGETS_DIRECTIVE
   BYTE_DIRECTIVE
   CALLPROTOTYPE_DIRECTIVE
   CALLTARGETS_DIRECTIVE
   MAXNNREG_DIRECTIVE
   REQNTID_DIRECTIVE
   SECTION_DIRECTIVE
   STRUCT_DIRECTIVE
   UNION_DIRECTIVE
   PERIOD


State 291 conflicts: 1 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input directive_statement
    3      | input function_defn
    4      | input function_decl

    5 $@1: %empty

    6 function_defn: function_decl $@1 statement_block

    7 $@2: %empty

    8 $@3: %empty

    9 function_defn: function_decl $@2 block_spec_list $@3 statement_block

   10 block_spec: MAXNTID_DIRECTIVE INT_OPERAND COMMA INT_OPERAND COMMA INT_OPERAND
   11           | MINNCTAPERSM_DIRECTIVE INT_OPERAND
   12           | MAXNCTAPERSM_DIRECTIVE INT_OPERAND

   13 block_spec_list: block_spec
   14                | block_spec_list block_spec

   15 $@4: %empty

   16 $@5: %empty

   17 function_decl: function_decl_header LEFT_PAREN $@4 param_entry RIGHT_PAREN $@5 function_ident_param

   18 $@6: %empty

   19 function_decl: function_decl_header $@6 function_ident_param
   20              | function_decl_header

   21 $@7: %empty

   22 $@8: %empty

   23 function_ident_param: IDENTIFIER $@7 LEFT_PAREN $@8 param_list RIGHT_PAREN
   24                     | IDENTIFIER

   25 function_decl_header: ENTRY_DIRECTIVE
   26                     | FUNC_DIRECTIVE
   27                     | VISIBLE_DIRECTIVE FUNC_DIRECTIVE
   28                     | EXTERN_DIRECTIVE FUNC_DIRECTIVE

   29 param_list: %empty
   30           | param_entry

   31 $@9: %empty

   32 param_list: param_list COMMA $@9 param_entry

   33 $@10: %empty

   34 param_entry: PARAM_DIRECTIVE $@10 variable_spec ptr_spec identifier_spec

   35 $@11: %empty

   36 param_entry: REG_DIRECTIVE $@11 variable_spec identifier_spec

   37 ptr_spec: %empty
   38         | PTR_DIRECTIVE ptr_space_spec ptr_align_spec
   39         | PTR_DIRECTIVE ptr_align_spec

   40 ptr_space_spec: GLOBAL_DIRECTIVE
   41               | LOCAL_DIRECTIVE
   42               | SHARED_DIRECTIVE

   43 ptr_align_spec: ALIGN_DIRECTIVE INT_OPERAND

   44 statement_block: LEFT_BRACE statement_list RIGHT_BRACE

   45 statement_list: directive_statement
   46               | instruction_statement
   47               | statement_list directive_statement
   48               | statement_list instruction_statement
   49               | statement_list statement_block
   50               | statement_block

   51 directive_statement: variable_declaration SEMI_COLON
   52                    | VERSION_DIRECTIVE DOUBLE_OPERAND
   53                    | VERSION_DIRECTIVE DOUBLE_OPERAND PLUS
   54                    | ADDRESS_SIZE_DIRECTIVE INT_OPERAND
   55                    | TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER
   56                    | TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER
   57                    | TARGET_DIRECTIVE IDENTIFIER
   58                    | FILE_DIRECTIVE INT_OPERAND STRING
   59                    | LOC_DIRECTIVE INT_OPERAND INT_OPERAND INT_OPERAND
   60                    | PRAGMA_DIRECTIVE STRING SEMI_COLON
   61                    | function_decl SEMI_COLON

   62 variable_declaration: variable_spec identifier_list
   63                     | variable_spec identifier_spec EQUALS initializer_list
   64                     | variable_spec identifier_spec EQUALS literal_operand
   65                     | CONSTPTR_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND

   66 variable_spec: var_spec_list

   67 identifier_list: identifier_spec
   68                | identifier_list COMMA identifier_spec

   69 identifier_spec: IDENTIFIER
   70                | IDENTIFIER LEFT_ANGLE_BRACKET INT_OPERAND RIGHT_ANGLE_BRACKET
   71                | IDENTIFIER LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
   72                | IDENTIFIER LEFT_SQUARE_BRACKET INT_OPERAND RIGHT_SQUARE_BRACKET

   73 var_spec_list: var_spec
   74              | var_spec_list var_spec

   75 var_spec: space_spec
   76         | type_spec
   77         | align_spec
   78         | EXTERN_DIRECTIVE

   79 align_spec: ALIGN_DIRECTIVE INT_OPERAND

   80 space_spec: REG_DIRECTIVE
   81           | SREG_DIRECTIVE
   82           | addressable_spec

   83 addressable_spec: CONST_DIRECTIVE
   84                 | GLOBAL_DIRECTIVE
   85                 | LOCAL_DIRECTIVE
   86                 | PARAM_DIRECTIVE
   87                 | SHARED_DIRECTIVE
   88                 | SURF_DIRECTIVE
   89                 | TEX_DIRECTIVE

   90 type_spec: scalar_type
   91          | vector_spec scalar_type

   92 vector_spec: V2_TYPE
   93            | V3_TYPE
   94            | V4_TYPE

   95 scalar_type: S8_TYPE
   96            | S16_TYPE
   97            | S32_TYPE
   98            | S64_TYPE
   99            | U8_TYPE
  100            | U16_TYPE
  101            | U32_TYPE
  102            | U64_TYPE
  103            | F16_TYPE
  104            | F32_TYPE
  105            | F64_TYPE
  106            | FF64_TYPE
  107            | B8_TYPE
  108            | B16_TYPE
  109            | B32_TYPE
  110            | B64_TYPE
  111            | BB64_TYPE
  112            | BB128_TYPE
  113            | PRED_TYPE
  114            | TEXREF_TYPE
  115            | SAMPLERREF_TYPE
  116            | SURFREF_TYPE

  117 initializer_list: LEFT_BRACE literal_list RIGHT_BRACE
  118                 | LEFT_BRACE initializer_list RIGHT_BRACE

  119 literal_list: literal_operand
  120             | literal_list COMMA literal_operand

  121 instruction_statement: instruction SEMI_COLON
  122                      | IDENTIFIER COLON
  123                      | pred_spec instruction SEMI_COLON

  124 $@12: %empty

  125 instruction: opcode_spec LEFT_PAREN operand RIGHT_PAREN $@12 COMMA operand COMMA LEFT_PAREN operand_list RIGHT_PAREN
  126            | opcode_spec operand COMMA LEFT_PAREN operand_list RIGHT_PAREN
  127            | opcode_spec operand COMMA LEFT_PAREN RIGHT_PAREN
  128            | opcode_spec operand_list
  129            | opcode_spec

  130 $@13: %empty

  131 opcode_spec: OPCODE $@13 option_list
  132            | OPCODE

  133 pred_spec: PRED IDENTIFIER
  134          | PRED EXCLAMATION IDENTIFIER
  135          | PRED IDENTIFIER LT_OPTION
  136          | PRED IDENTIFIER EQ_OPTION
  137          | PRED IDENTIFIER LE_OPTION
  138          | PRED IDENTIFIER NE_OPTION
  139          | PRED IDENTIFIER GE_OPTION
  140          | PRED IDENTIFIER EQU_OPTION
  141          | PRED IDENTIFIER GTU_OPTION
  142          | PRED IDENTIFIER NEU_OPTION
  143          | PRED IDENTIFIER CF_OPTION
  144          | PRED IDENTIFIER SF_OPTION
  145          | PRED IDENTIFIER NSF_OPTION

  146 option_list: option
  147            | option option_list

  148 option: type_spec
  149       | compare_spec
  150       | addressable_spec
  151       | rounding_mode
  152       | UNI_OPTION
  153       | WIDE_OPTION
  154       | ANY_OPTION
  155       | ALL_OPTION
  156       | BALLOT_OPTION
  157       | GLOBAL_OPTION
  158       | CTA_OPTION
  159       | SYS_OPTION
  160       | GEOM_MODIFIER_1D
  161       | GEOM_MODIFIER_2D
  162       | GEOM_MODIFIER_3D
  163       | SAT_OPTION
  164       | FTZ_OPTION
  165       | NEG_OPTION
  166       | APPROX_OPTION
  167       | FULL_OPTION
  168       | EXIT_OPTION
  169       | ABS_OPTION
  170       | atomic_operation_spec
  171       | TO_OPTION
  172       | HALF_OPTION
  173       | CA_OPTION
  174       | CG_OPTION
  175       | CS_OPTION
  176       | LU_OPTION
  177       | CV_OPTION
  178       | WB_OPTION
  179       | WT_OPTION

  180 atomic_operation_spec: ATOMIC_AND
  181                      | ATOMIC_OR
  182                      | ATOMIC_XOR
  183                      | ATOMIC_CAS
  184                      | ATOMIC_EXCH
  185                      | ATOMIC_ADD
  186                      | ATOMIC_INC
  187                      | ATOMIC_DEC
  188                      | ATOMIC_MIN
  189                      | ATOMIC_MAX

  190 rounding_mode: floating_point_rounding_mode
  191              | integer_rounding_mode

  192 floating_point_rounding_mode: RN_OPTION
  193                             | RZ_OPTION
  194                             | RM_OPTION
  195                             | RP_OPTION

  196 integer_rounding_mode: RNI_OPTION
  197                      | RZI_OPTION
  198                      | RMI_OPTION
  199                      | RPI_OPTION

  200 compare_spec: EQ_OPTION
  201             | NE_OPTION
  202             | LT_OPTION
  203             | LE_OPTION
  204             | GT_OPTION
  205             | GE_OPTION
  206             | LO_OPTION
  207             | LS_OPTION
  208             | HI_OPTION
  209             | HS_OPTION
  210             | EQU_OPTION
  211             | NEU_OPTION
  212             | LTU_OPTION
  213             | LEU_OPTION
  214             | GTU_OPTION
  215             | GEU_OPTION
  216             | NUM_OPTION
  217             | NAN_OPTION

  218 operand_list: operand
  219             | operand COMMA operand_list

  220 operand: IDENTIFIER
  221        | EXCLAMATION IDENTIFIER
  222        | MINUS IDENTIFIER
  223        | memory_operand
  224        | literal_operand
  225        | builtin_operand
  226        | vector_operand
  227        | MINUS vector_operand
  228        | tex_operand
  229        | IDENTIFIER PLUS INT_OPERAND
  230        | IDENTIFIER LO_OPTION
  231        | MINUS IDENTIFIER LO_OPTION
  232        | IDENTIFIER HI_OPTION
  233        | MINUS IDENTIFIER HI_OPTION
  234        | IDENTIFIER PIPE IDENTIFIER
  235        | IDENTIFIER PIPE IDENTIFIER LO_OPTION
  236        | IDENTIFIER PIPE IDENTIFIER HI_OPTION
  237        | IDENTIFIER BACKSLASH IDENTIFIER
  238        | IDENTIFIER BACKSLASH IDENTIFIER LO_OPTION
  239        | IDENTIFIER BACKSLASH IDENTIFIER HI_OPTION

  240 vector_operand: LEFT_BRACE IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  241               | LEFT_BRACE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  242               | LEFT_BRACE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RIGHT_BRACE
  243               | LEFT_BRACE IDENTIFIER RIGHT_BRACE

  244 $@14: %empty

  245 tex_operand: LEFT_SQUARE_BRACKET IDENTIFIER COMMA $@14 vector_operand RIGHT_SQUARE_BRACKET

  246 builtin_operand: SPECIAL_REGISTER DIMENSION_MODIFIER
  247                | SPECIAL_REGISTER

  248 memory_operand: LEFT_SQUARE_BRACKET address_expression RIGHT_SQUARE_BRACKET
  249               | IDENTIFIER LEFT_SQUARE_BRACKET address_expression RIGHT_SQUARE_BRACKET
  250               | IDENTIFIER LEFT_SQUARE_BRACKET literal_operand RIGHT_SQUARE_BRACKET
  251               | IDENTIFIER LEFT_SQUARE_BRACKET twin_operand RIGHT_SQUARE_BRACKET
  252               | MINUS memory_operand

  253 twin_operand: IDENTIFIER PLUS IDENTIFIER
  254             | IDENTIFIER PLUS IDENTIFIER LO_OPTION
  255             | IDENTIFIER PLUS IDENTIFIER HI_OPTION
  256             | IDENTIFIER PLUS EQUALS IDENTIFIER
  257             | IDENTIFIER PLUS EQUALS IDENTIFIER LO_OPTION
  258             | IDENTIFIER PLUS EQUALS IDENTIFIER HI_OPTION
  259             | IDENTIFIER PLUS EQUALS INT_OPERAND

  260 literal_operand: INT_OPERAND
  261                | FLOAT_OPERAND
  262                | DOUBLE_OPERAND

  263 address_expression: IDENTIFIER
  264                   | IDENTIFIER LO_OPTION
  265                   | IDENTIFIER HI_OPTION
  266                   | IDENTIFIER PLUS INT_OPERAND
  267                   | INT_OPERAND


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING (258) 58 60
OPCODE (259) 131 132
ALIGN_DIRECTIVE (260) 43 79
BRANCHTARGETS_DIRECTIVE (261)
BYTE_DIRECTIVE (262)
CALLPROTOTYPE_DIRECTIVE (263)
CALLTARGETS_DIRECTIVE (264)
CONST_DIRECTIVE (265) 83
CONSTPTR_DIRECTIVE (266) 65
PTR_DIRECTIVE (267) 38 39
ENTRY_DIRECTIVE (268) 25
EXTERN_DIRECTIVE (269) 28 78
FILE_DIRECTIVE (270) 58
FUNC_DIRECTIVE (271) 26 27 28
GLOBAL_DIRECTIVE (272) 40 84
LOCAL_DIRECTIVE (273) 41 85
LOC_DIRECTIVE (274) 59
MAXNCTAPERSM_DIRECTIVE (275) 12
MAXNNREG_DIRECTIVE (276)
MAXNTID_DIRECTIVE (277) 10
MINNCTAPERSM_DIRECTIVE (278) 11
PARAM_DIRECTIVE (279) 34 86
PRAGMA_DIRECTIVE (280) 60
REG_DIRECTIVE (281) 36 80
REQNTID_DIRECTIVE (282)
SECTION_DIRECTIVE (283)
SHARED_DIRECTIVE (284) 42 87
SREG_DIRECTIVE (285) 81
STRUCT_DIRECTIVE (286)
SURF_DIRECTIVE (287) 88
TARGET_DIRECTIVE (288) 55 56 57
TEX_DIRECTIVE (289) 89
UNION_DIRECTIVE (290)
VERSION_DIRECTIVE (291) 52 53
ADDRESS_SIZE_DIRECTIVE (292) 54
VISIBLE_DIRECTIVE (293) 27
IDENTIFIER (294) 23 24 55 56 57 65 69 70 71 72 122 133 134 135 136
    137 138 139 140 141 142 143 144 145 220 221 222 229 230 231 232
    233 234 235 236 237 238 239 240 241 242 243 245 249 250 251 253
    254 255 256 257 258 259 263 264 265 266
INT_OPERAND (295) 10 11 12 43 54 58 59 65 70 72 79 229 259 260 266
    267
FLOAT_OPERAND (296) 261
DOUBLE_OPERAND (297) 52 53 262
S8_TYPE (298) 95
S16_TYPE (299) 96
S32_TYPE (300) 97
S64_TYPE (301) 98
U8_TYPE (302) 99
U16_TYPE (303) 100
U32_TYPE (304) 101
U64_TYPE (305) 102
F16_TYPE (306) 103
F32_TYPE (307) 104
F64_TYPE (308) 105
FF64_TYPE (309) 106
B8_TYPE (310) 107
B16_TYPE (311) 108
B32_TYPE (312) 109
B64_TYPE (313) 110
BB64_TYPE (314) 111
BB128_TYPE (315) 112
PRED_TYPE (316) 113
TEXREF_TYPE (317) 114
SAMPLERREF_TYPE (318) 115
SURFREF_TYPE (319) 116
V2_TYPE (320) 92
V3_TYPE (321) 93
V4_TYPE (322) 94
COMMA (323) 10 32 55 56 65 68 120 125 126 127 219 240 241 242 245
PRED (324) 133 134 135 136 137 138 139 140 141 142 143 144 145
HALF_OPTION (325) 172
EQ_OPTION (326) 136 200
NE_OPTION (327) 138 201
LT_OPTION (328) 135 202
LE_OPTION (329) 137 203
GT_OPTION (330) 204
GE_OPTION (331) 139 205
LO_OPTION (332) 206 230 231 235 238 254 257 264
LS_OPTION (333) 207
HI_OPTION (334) 208 232 233 236 239 255 258 265
HS_OPTION (335) 209
EQU_OPTION (336) 140 210
NEU_OPTION (337) 142 211
LTU_OPTION (338) 212
LEU_OPTION (339) 213
GTU_OPTION (340) 141 214
GEU_OPTION (341) 215
NUM_OPTION (342) 216
NAN_OPTION (343) 217
CF_OPTION (344) 143
SF_OPTION (345) 144
NSF_OPTION (346) 145
LEFT_SQUARE_BRACKET (347) 71 72 245 248 249 250 251
RIGHT_SQUARE_BRACKET (348) 71 72 245 248 249 250 251
WIDE_OPTION (349) 153
SPECIAL_REGISTER (350) 246 247
MINUS (351) 222 227 231 233 252
PLUS (352) 53 229 253 254 255 256 257 258 259 266
COLON (353) 122
SEMI_COLON (354) 51 60 61 121 123
EXCLAMATION (355) 134 221
PIPE (356) 234 235 236
RIGHT_BRACE (357) 44 117 118 240 241 242 243
LEFT_BRACE (358) 44 117 118 240 241 242 243
EQUALS (359) 63 64 256 257 258 259
PERIOD (360)
BACKSLASH (361) 237 238 239
DIMENSION_MODIFIER (362) 246
RN_OPTION (363) 192
RZ_OPTION (364) 193
RM_OPTION (365) 194
RP_OPTION (366) 195
RNI_OPTION (367) 196
RZI_OPTION (368) 197
RMI_OPTION (369) 198
RPI_OPTION (370) 199
UNI_OPTION (371) 152
GEOM_MODIFIER_1D (372) 160
GEOM_MODIFIER_2D (373) 161
GEOM_MODIFIER_3D (374) 162
SAT_OPTION (375) 163
FTZ_OPTION (376) 164
NEG_OPTION (377) 165
ATOMIC_AND (378) 180
ATOMIC_OR (379) 181
ATOMIC_XOR (380) 182
ATOMIC_CAS (381) 183
ATOMIC_EXCH (382) 184
ATOMIC_ADD (383) 185
ATOMIC_INC (384) 186
ATOMIC_DEC (385) 187
ATOMIC_MIN (386) 188
ATOMIC_MAX (387) 189
LEFT_ANGLE_BRACKET (388) 70
RIGHT_ANGLE_BRACKET (389) 70
LEFT_PAREN (390) 17 23 125 126 127
RIGHT_PAREN (391) 17 23 125 126 127
APPROX_OPTION (392) 166
FULL_OPTION (393) 167
ANY_OPTION (394) 154
ALL_OPTION (395) 155
BALLOT_OPTION (396) 156
GLOBAL_OPTION (397) 157
CTA_OPTION (398) 158
SYS_OPTION (399) 159
EXIT_OPTION (400) 168
ABS_OPTION (401) 169
TO_OPTION (402) 171
CA_OPTION (403) 173
CG_OPTION (404) 174
CS_OPTION (405) 175
LU_OPTION (406) 176
CV_OPTION (407) 177
WB_OPTION (408) 178
WT_OPTION (409) 179


Nonterminals, with rules where they appear

$accept (155)
    on left: 0
input (156)
    on left: 1 2 3 4, on right: 0 2 3 4
function_defn (157)
    on left: 6 9, on right: 3
$@1 (158)
    on left: 5, on right: 6
$@2 (159)
    on left: 7, on right: 9
$@3 (160)
    on left: 8, on right: 9
block_spec (161)
    on left: 10 11 12, on right: 13 14
block_spec_list (162)
    on left: 13 14, on right: 9 14
function_decl (163)
    on left: 17 19 20, on right: 4 6 9 61
$@4 (164)
    on left: 15, on right: 17
$@5 (165)
    on left: 16, on right: 17
$@6 (166)
    on left: 18, on right: 19
function_ident_param (167)
    on left: 23 24, on right: 17 19
$@7 (168)
    on left: 21, on right: 23
$@8 (169)
    on left: 22, on right: 23
function_decl_header (170)
    on left: 25 26 27 28, on right: 17 19 20
param_list (171)
    on left: 29 30 32, on right: 23 32
$@9 (172)
    on left: 31, on right: 32
param_entry (173)
    on left: 34 36, on right: 17 30 32
$@10 (174)
    on left: 33, on right: 34
$@11 (175)
    on left: 35, on right: 36
ptr_spec (176)
    on left: 37 38 39, on right: 34
ptr_space_spec (177)
    on left: 40 41 42, on right: 38
ptr_align_spec (178)
    on left: 43, on right: 38 39
statement_block (179)
    on left: 44, on right: 6 9 49 50
statement_list (180)
    on left: 45 46 47 48 49 50, on right: 44 47 48 49
directive_statement (181)
    on left: 51 52 53 54 55 56 57 58 59 60 61, on right: 2 45 47
variable_declaration (182)
    on left: 62 63 64 65, on right: 51
variable_spec (183)
    on left: 66, on right: 34 36 62 63 64
identifier_list (184)
    on left: 67 68, on right: 62 68
identifier_spec (185)
    on left: 69 70 71 72, on right: 34 36 63 64 67 68
var_spec_list (186)
    on left: 73 74, on right: 66 74
var_spec (187)
    on left: 75 76 77 78, on right: 73 74
align_spec (188)
    on left: 79, on right: 77
space_spec (189)
    on left: 80 81 82, on right: 75
addressable_spec (190)
    on left: 83 84 85 86 87 88 89, on right: 82 150
type_spec (191)
    on left: 90 91, on right: 76 148
vector_spec (192)
    on left: 92 93 94, on right: 91
scalar_type (193)
    on left: 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
    110 111 112 113 114 115 116, on right: 90 91
initializer_list (194)
    on left: 117 118, on right: 63 118
literal_list (195)
    on left: 119 120, on right: 117 120
instruction_statement (196)
    on left: 121 122 123, on right: 46 48
instruction (197)
    on left: 125 126 127 128 129, on right: 121 123
$@12 (198)
    on left: 124, on right: 125
opcode_spec (199)
    on left: 131 132, on right: 125 126 127 128 129
$@13 (200)
    on left: 130, on right: 131
pred_spec (201)
    on left: 133 134 135 136 137 138 139 140 141 142 143 144 145, on right:
    123
option_list (202)
    on left: 146 147, on right: 131 147
option (203)
    on left: 148 149 150 151 152 153 154 155 156 157 158 159 160 161
    162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177
    178 179, on right: 146 147
atomic_operation_spec (204)
    on left: 180 181 182 183 184 185 186 187 188 189, on right: 170
rounding_mode (205)
    on left: 190 191, on right: 151
floating_point_rounding_mode (206)
    on left: 192 193 194 195, on right: 190
integer_rounding_mode (207)
    on left: 196 197 198 199, on right: 191
compare_spec (208)
    on left: 200 201 202 203 204 205 206 207 208 209 210 211 212 213
    214 215 216 217, on right: 149
operand_list (209)
    on left: 218 219, on right: 125 126 128 219
operand (210)
    on left: 220 221 222 223 224 225 226 227 228 229 230 231 232 233
    234 235 236 237 238 239, on right: 125 126 127 218 219
vector_operand (211)
    on left: 240 241 242 243, on right: 226 227 245
tex_operand (212)
    on left: 245, on right: 228
$@14 (213)
    on left: 244, on right: 245
builtin_operand (214)
    on left: 246 247, on right: 225
memory_operand (215)
    on left: 248 249 250 251 252, on right: 223 252
twin_operand (216)
    on left: 253 254 255 256 257 258 259, on right: 251
literal_operand (217)
    on left: 260 261 262, on right: 64 119 120 224 250
address_expression (218)
    on left: 263 264 265 266 267, on right: 248 249


State 0

    0 $accept: . input $end
    1 input: . %empty
    2      | . input directive_statement
    3      | . input function_defn
    4      | . input function_decl

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . directive_statement
    3      | input . function_defn
    4      | input . function_decl
    6 function_defn: . function_decl $@1 statement_block
    9              | . function_decl $@2 block_spec_list $@3 statement_block
   17 function_decl: . function_decl_header LEFT_PAREN $@4 param_entry RIGHT_PAREN $@5 function_ident_param
   19              | . function_decl_header $@6 function_ident_param
   20              | . function_decl_header
   25 function_decl_header: . ENTRY_DIRECTIVE
   26                     | . FUNC_DIRECTIVE
   27                     | . VISIBLE_DIRECTIVE FUNC_DIRECTIVE
   28                     | . EXTERN_DIRECTIVE FUNC_DIRECTIVE
   51 directive_statement: . variable_declaration SEMI_COLON
   52                    | . VERSION_DIRECTIVE DOUBLE_OPERAND
   53                    | . VERSION_DIRECTIVE DOUBLE_OPERAND PLUS
   54                    | . ADDRESS_SIZE_DIRECTIVE INT_OPERAND
   55                    | . TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER
   56                    | . TARGET_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER
   57                    | . TARGET_DIRECTIVE IDENTIFIER
   58                    | . FILE_DIRECTIVE INT_OPERAND STRING
   59                    | . LOC_DIRECTIVE INT_OPERAND INT_OPERAND INT_OPERAND
   60                    | . PRAGMA_DIRECTIVE STRING SEMI_COLON
   61                    | . function_decl SEMI_COLON
   62 variable_declaration: . variable_spec identifier_list
   63                     | . variable_spec identifier_spec EQUALS initializer_list
   64                     | . variable_spec identifier_spec EQUALS literal_operand
   65                     | . CONSTPTR_DIRECTIVE IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND
   66 variable_spec: . var_spec_list
   73 var_spec_list: . var_spec
   74              | . var_spec_list var_spec
   75 var_spec: . space_spec
   76         | . type_spec
   77         | . align_spec
   78         | . EXTERN_DIRECTIVE
   79 align_spec: . ALIGN_DIRECTIVE INT_OPERAND
   80 space_spec: . REG_DIRECTIVE
   81           | . SREG_DIRECTIVE
   82           | . addressable_spec
   83 addressable_spec: . CONST_DIRECTIVE
   84                 | . GLOBAL_DIRECTIVE
   85                 | . LOCAL_DIRECTIVE
   86                 | . PARAM_DIRECTIVE
   87                 | . SHARED_DIRECTIVE
   88                 | . SURF_DIRECTIVE
   89                 | . TEX_DIRECTIVE
   90 type_spec: . scalar_type
   91          | . vector_spec scalar_type
   92 vector_spec: . V2_TYPE
   93            | . V3_TYPE
   94            | . V4_TYPE
   95 scalar_type: . S8_TYPE
   96            | . S16_TYPE
   97            | . S32_TYPE
   98            | . S64_TYPE
   99            | . U8_TYPE
  100            | . U16_TYPE
  101            | . U32_TYPE
  102            | . U64_TYPE
  103            | . F16_TYPE
  104            | . F32_TYPE
  105            | . F64_TYPE
  106            | . FF64_TYPE
  107            | . B8_TYPE
  108            | . B16_TYPE
  109            | . B32_TYPE
  110            | . B64_TYPE
  111            | . BB64_TYPE
  112            | . BB128_TYPE
  113            | . PRED_TYPE
  114            | . TEXREF_TYPE
  115            | . SAMPLERREF_TYPE
  116            | . SURFREF_TYPE

    $end                    shift, and go to state 2
    ALIGN_DIRECTIVE         shift, and go to state 3
    CONST_DIRECTIVE         shift, and go to state 4
    CONSTPTR_DIRECTIVE      shift, and go to state 5
    ENTRY_DIRECTIVE         shift, and go to state 6
    EXTERN_DIRECTIVE        shift, and go to state 7
    FILE_DIRECTIVE          shift, and go to state 8
    FUNC_DIRECTIVE          shift, and go to state 9
    GLOBAL_DIRECTIVE        shift, and go to state 10
    LOCAL_DIRECTIVE         shift, and go to state 11
    LOC_DIRECTIVE           shift, and go to state 12
    PARAM_DIRECTIVE         shift, and go to state 13
    PRAGMA_DIRECTIVE        shift, and go to state 14
    REG_DIRECTIVE           shift, and go to state 15
    SHARED_DIRECTIVE        shift, and go to state 16
    SREG_DIRECTIVE          shift, and go to state 17
    SURF_DIRECTIVE          shift, and go to state 18
    TARGET_DIRECTIVE        shift, and go to state 19
    TEX_DIRECTIVE           shift, and go to state 20
    VERSION_DIRECTIVE       shift, and go to state 21
    ADDRESS_SIZE_DIRECTIVE  shift, and go to state 22
    VISIBLE_DIRECTIVE       shift, and go to state 23
    S8_TYPE                 shift, and go to state 24
    S16_TYPE                shift, and go to state 25
    S32_TYPE                shift, and go to state 26
    S64_TYPE                shift, and go to state 27
    U8_TYPE                 shift, and go to state 28
    U16_TYPE                shift, and go to state 29
    U32_TYPE                shift, and go to state 30
    U64_TYPE                shift, and go to state 31
    F16_TYPE                shift, and go to state 32
    F32_TYPE                shift, and go to state 33
    F64_TYPE                shift, and go to state 34
    FF64_TYPE               shift, and go to state 35
    B8_TYPE                 shift, and go to state 36
    B16_TYPE                shift, and go to state 37
    B32_TYPE                shift, and go to state 38
    B64_TYPE                shift, and go to state 39
    BB64_TYPE               shift, and go to state 40
    BB128_TYPE              shift, and go to state 41
    PRED_TYPE               shift, and go to state 42
    TEXREF_TYPE             shift, and go to state 43
    SAMPLERREF_TYPE         shift, and go to state 44
    SURFREF_TYPE            shift, and go to state 45
    V2_TYPE                 shift, and go to state 46
    V3_TYPE                 shift, and go to state 47
    V4_TYPE                 shift, and go to state 48

    function_defn         go to state 49
    function_decl         go to state 50
    function_decl_header  go to state 51
    directive_statement   go to state 52
    variable_declaration  go to state 53
    variable_spec         go to state 54
    var_spec_list         go to state 55
    var_spec              go to state 56
    align_spec            go to state 57
    space_spec            go to state 58
    addressable_spec      go to state 59
    type_spec             go to state 60
    vector_spec           go to state 61
    scalar_type           go to state 62


State 2

    0 $accept: input $end .

    $default  accept


State 3

   79 align_spec: ALIGN_DIRECTIVE . INT_OPERAND

    INT_OPERAND  shift, and go to state 63


State 4

   83 addressable_spec: CONST_DIRECTIVE .

    $default  reduce using rule 83 (addressable_spec)


State 5

   65 variable_declaration: CONSTPTR_DIRECTIVE . IDENTIFIER COMMA IDENTIFIER COMMA INT_OPERAND

    IDENTIFIER  shift, and go to state 64


State 6

   25 function_decl_header: ENTRY_DIRECTIVE .

    $default  reduce using rule 25 (function_decl_header)


State 7

   28 function_decl_header: EXTERN_DIRECTIVE . FUNC_DIRECTIVE
   78 var_spec: EXTERN_DIRECTIVE .  [ALIGN_DIRECTIVE, CONST_DIRECTIVE, EXTERN_DIRECTIVE, GLOBAL_DIRECTIVE, LOCAL_DIRECTIVE, PARAM_DIRECTIVE, REG_DIRECTIVE, SHARED_DIRECTIVE, SREG_DIRECTIVE, SURF_DIRECTIVE, TEX_DIRECTIVE, IDENTIFIER, S8_TYPE, S16_TYPE, S32_TYPE, S64_TYPE, U8_TYPE, U16_TYPE, U32_TYPE, U64_TYPE, F16_TYPE, F32_TYPE, F64_TYPE, FF64_TYPE, B8_TYPE, B16_TYPE, B32_TYPE, B64_TYPE, BB64_TYPE, BB128_TYPE, PRED_TYPE, TEXREF_TYPE, SAMPLERREF_TYPE, SURFREF_TYPE, V2_TYPE, V3_TYPE, V4_TYPE]

    FUNC_DIRECTIVE  shift, and go to state 65

    $default  reduce using rule 78 (var_spec)


State 8

   58 directive_statement: FILE_DIRECTIVE . INT_OPERAND STRING

    INT_OPERAND  shift, and go to state 66


State 9

   26 function_decl_header: FUNC_DIRECTIVE .

    $default  reduce using rule 26 (function_decl_header)


State 10

   84 addressable_spec: GLOBAL_DIRECTIVE .

    $default  reduce using rule 84 (addressable_spec)


State 11

   85 addressable_spec: LOCAL_DIRECTIVE .

    $default  reduce using rule 85 (addressable_spec)


State 12

   59 directive_statement: LOC_DIRECTIVE . INT_OPERAND INT_OPERAND INT_OPERAND

    INT_OPERAND  shift, and go to state 67


State 13

   86 addressable_spec: PARAM_DIRECTIVE .

    $default  reduce using rule 86 (addressable_spec)


State 14

   60 directive_statement: PRAGMA_DIRECTIVE . STRING SEMI_COLON

    STRING  shift, and go to state 68


State 15

   80 space_spec: REG_DIRECTIVE .

    $default  reduce using rule 80 (space_spec)


State 16

   87 addressable_spec: SHARED_DIRECTIVE .

    $default  reduce using rule 87 (addressable_spec)


State 17

   81 space_spec: SREG_DIRECTIVE .
